izmenjen css, dodati novi html i kontroleri

--- a/css/me.css
+++ b/css/me.css
@@ -1,6 +1,7 @@
-body {
-     background-color: #f2f2f5;
-   padding: 20px 10px;
+body 
+{
+    background-color: #f2f2f5;
+    padding: 20px 10px;
 }
 
 #content
@@ -19,28 +20,23 @@ body {
 
 #main-container
 {
-   /*min-height: 400px;
-   margin: 20px 175px auto 225px;
-   padding: 25px 50px;
-   background-color: #fff;
-   border: 1px solid #111;
-   border-radius: 15px;
-   border-color: rgb(255,255,255);
-  /*#337ab7*/ 
-  
-  /*min-height: 400px;*/
    margin: 0px auto 0px auto;
    padding: 25px 50px;
    background-color: #fff;
-   border: 1px solid #111;
+   border: 1px solid #337ab7;
    border-radius: 15px;
-   border-color: rgb(255,255,255);
 }
 
 
 #log_out
 {
 	float:right;
+}
+
+#log_in
+{
+	float:right;
+	margin-bottom: 20px;
 }
 
 #imeIprezime
@@ -52,7 +48,7 @@ body {
 {
    display:block;
    min-height: 500px;
-   max-height: 500px; 
+   /*max-height: 500px; */
    padding: 20px;
    background-color: #eee;
    border: 1px solid #eee;
@@ -61,7 +57,7 @@ body {
    overflow: auto;
    clear: both;
    margin-top: 40px;
-   /*border-color: rgb(255,255,255);*/
+   
  }
 
 p.imenaFormi {
@@ -91,11 +87,11 @@ p.imenaFormi {
 #grafZamena
 {
 	float:right;
+	color: 337ab7;
 }
 
-#napomena
+.napomena
 {
-	max-width: 50px;
 	border: 1px solid white;
 	border-radius: 3px;
 }
@@ -115,4 +111,40 @@ p.imenaFormi {
 {
 	color: rgb(96,96,96);
 	padding: 8px;
+}
+
+
+.bold
+{
+	font-weight: bold;
+}
+
+.zamene
+{
+	width: 60%;
+	height: auto;
+	margin-right: 50px;
+}
+
+.div1 {
+    background: Brown;
+    width: 200px;
+    height: 200px;
+    text-align: center;
+    
+}
+.div1 ul {
+    position: relative;
+    top: 50%;
+}
+
+#zamena_asistenti 
+{
+	display:  none;
+}
+
+
+footer
+{
+	font-size: x-small;
 }
