--- a/css/me.css
+++ b/css/me.css
@@ -34,6 +34,7 @@ body {
    background-color: #fff;
    border: 1px solid #111;
    border-radius: 15px;
+   overflow-x: hidden;
    border-color: rgb(255,255,255);
 }
 
@@ -64,6 +65,22 @@ body {
    /*border-color: rgb(255,255,255);*/
  }
 
+.container
+ {
+   display:block;
+   min-height: 500px;
+   padding: 20px;
+   background-color: #eee;
+   border: 1px solid #eee;
+   border-radius: 8px;
+   padding: 10px 20px;
+   clear: both;
+   margin-top: 40px;
+   overflow: visible;
+   /*border-color: rgb(255,255,255);*/
+ }
+ 
+ 
 p.imenaFormi {
 	clear: both;
 	color: #777;
@@ -115,4 +132,48 @@ p.imenaFormi {
 {
 	color: rgb(96,96,96);
 	padding: 8px;
+}
+
+.loginform 
+{
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000000;
+  overflow: hidden;
+  
+}
+
+.login
+{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  min-height: 400px;
+  margin-left: -200px;
+  margin-top: -200px;
+  border: 0px;
+  border-radius: 5px;
+  background-color: rgb(255, 255, 255);
+  padding: 10px;
+}
+
+.logintop
+{
+  float: right;
+}
+
+.loginbody
+{
+  text-align: center;
+}
+
+.loginbody img
+{
+  height: 190px;
+  width: 190px;
 }
