--- a/css/me.css
+++ b/css/me.css
@@ -14,7 +14,7 @@ body
 {
    width: 126px;
    position: absolute;
-   top: 150px;
+   top: 126px;
    left: -126px;
 }
 
@@ -32,6 +32,7 @@ body
 #log_out
 {
 	float:right;
+	margin-bottom: 20px;
 }
 
 #log_in
@@ -151,7 +152,7 @@ p.imenaFormi {
   top: 50%;
   left: 50%;
   width: 400px;
-  min-height: 400px;
+  /*min-height: 400px;*/
   margin-left: -200px;
   margin-top: -200px;
   border: 0px;
